[package]
name = "tetsuyu"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.30", features = ["serde"] }
cpal = "0.16"
fundsp = { version = "0.20", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
bitflags = "2.9"
wgpu = "27.0"
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
pollster = "0.4"
librashader = { version = "0.9", default-features = false, features = ["runtime-wgpu", "presets"] }