[package]
name = "tetsuyu"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.30", features = ["serde"] }
cpal = "0.18.1"
fundsp = { version = "0.23", default-features = false, features = ["std"] }
clap = { version = "4.6", features = ["derive"] }
bitflags = "2.13"
wgpu = "30.0"
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
pollster = "0.4"
librashader = { version = "0.12", default-features = false, features = ["runtime-wgpu", "presets"] }
png = "0.18"
blip_buf = "0.1.6"
rtrb = "0.3.4"
